css and js linked

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Motor controller</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-<h1 id="text">Hello world</h1>
-<script src="script.js"></script>
+<h1 id="text">Asalamu Alaikum</h1>
+<script src="static/script.js"></script>
 </body>
 </html>
