changed to mouse up and mouse down event listeners

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,10 +34,10 @@
                     <p class="port-button" id="display-text"></p>
                 </div>
                 <div class="start-button">
-                    <button type="button" class="btn btn-success btn-lg"
-                        onclick="rotateMotor('forward')">Forward</button>
-                    <button type="button" class="btn btn-success btn-lg"
-                        onclick="rotateMotor('reverse')">Reverse</button>
+                    <button id="forwardButton" type="button" class="btn btn-success btn-lg">Forward</button>
+                    <button id="reverseButton" type="button" class="btn btn-success btn-lg">Reverse</button>
+                    <!-- <button type="button" class="btn btn-warning btn-lg"
+                        onclick="getValues()">Val</button> -->
                 </div>
             </div>
             <div class="col-9 chart">
