made chart.min.js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -182,10 +182,9 @@
 
     </div>
 
-
+    <script src="static/jquery-3.7.1.min.js"></script>
     <script src="static/bootstrap.min.js"></script>
-    <script src="static/jquery-3.71.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="static/chart.min.js"></script>
     <script src="static/script.js"></script>
 </body>
 
